<?xml version="1.0"?>
<package>
  <name>utils_threadpool</name>
  <version>0.0.1</version>
  <description>The utils_threadpool package contains a c++11 library to realize controlled threading.</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
