<?xml version="1.0"?>
<package>
  <name>cslibs_threadpool</name>
  <version>0.0.1</version>
  <description>The cslibs_threadpool package contains a c++11 library to realize controlled threading.</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <author email="richard.hanten@uni-tuebingen.de">hanten</author>

  <export>

  </export>
</package>
